--- a/Style/main_style.css
+++ b/Style/main_style.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: 'Miama';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Miama'), url('https://fonts.cdnfonts.com/s/302/Miama-Regular.woff') format('woff');
+}
+@font-face {
+  font-family: 'Miama';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Miama'), url('https://fonts.cdnfonts.com/s/302/Miama.woff') format('woff');
+}
+
 
 /* sharing style star*/
 .inter-font{
@@ -101,6 +114,15 @@
   .banner-deatials{
     width: 100%;
     /* padding: 100px 5px 10px 100px; */
+  }
+  .header-shape-style{
+    font-family: Miama;
+    font-size: 78px;
+    font-style: italic;
+    font-weight: 400;
+    line-height:  150px;
+    /
+
   }
   .banner-title{
     font-size: 4rem;
@@ -475,7 +497,7 @@ th{
   padding: 5%;
 }
 .select-gender{
-  width: 33%;
+  width: 170px;
 }
 
 .your-height-weight,.your-age-gender{
